tests/errors/specific_type_intrinsic.f90
program specific_type_intrinsic
    print*, dabs(1)
end program